# tag-from-spotify

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml
tfsp/: __main__.py  tag-from-spotify.py  tag_from_spotify.py
