[metadata]
name = tag-from-spotify
version = 0.0.1
author = Detsu
# author_email = 
description = fetch audio metadata from spotify and tag them to your audio files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Detsudetsu/tag-from-spotify
# project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
python_requires = >=3.6
install_requires = 
    spotipy
    mutagen
    tqdm
    click
    fire

[options.entry_points]
console_scripts =
    tfsp = tfsp.__main__:main